@@ -114,7 +114,8 @@ S3method(print, survreg.penal)
 S3method(print, yates)
 S3method(quantile, survfit)
 S3method(quantile, survfitms)
-S3method(ratetableDate, POSIXt)
+S3method(ratetableDate, POSIXct)
+S3method(ratetableDate, POSIXlt)
 S3method(ratetableDate, Date)
 S3method(ratetableDate, date)
 S3method(ratetableDate, chron)
